--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
-.myNewClass{background:#f00;border:1px solid #fff}
-body{color:#fff;font-size:13px;font-family:Helvetica,Verdana,Arial,sans-serif;background:#ddd;margin:0;height:1000px}
+body{color:#fff;font-size:13px;font-family:Helvetica,Verdana,Arial,sans-serif;background:#ddd;margin:0}
 ul{list-style:none;display:block;position:inherit;bottom:5px}
 img{display:block;margin:10px auto 0 auto;-webkit-box-reflect:below 4px -webkit-gradient(linear,left top,left bottom,from(transparent),color-stop(.7,transparent),to(#fff));-webkit-border-radius:5px;border-radius:5px}
 a{color:#555;text-decoration:none}
