--- a/css/styles.styl
+++ b/css/styles.styl
@@ -10,9 +10,6 @@ body
   
 ul
   list-style none
-  display block
-  position inherit
-  bottom 5px
   
 img
   display block
@@ -82,6 +79,13 @@ a:hover
   padding 10px 0px 0px 10px
   width 390px
   height 370px
+  position relative
+  
+.wrapper
+  position relative
+.bottom
+  position absolute
+  bottom 35px
 
 #footer 
   color white
