--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body{color:#fff;font-size:13px;font-family:Helvetica,Verdana,Arial,sans-serif;background:#ddd;margin:0}
-ul{list-style:none;display:block;position:inherit;bottom:5px}
+ul{list-style:none}
 img{display:block;margin:10px auto 0 auto;-webkit-box-reflect:below 4px -webkit-gradient(linear,left top,left bottom,from(transparent),color-stop(.7,transparent),to(#fff));-webkit-border-radius:5px;border-radius:5px}
 a{color:#555;text-decoration:none}
 a:hover{color:#a93961;text-decoration:underline}
@@ -9,7 +9,9 @@ a:hover{color:#a93961;text-decoration:underline}
 #grid{width:820px;margin:10px auto 0 auto;overflow:scroll;clear:both}
 .row{overflow:hidden}
 .cell{float:left;padding:5px;overflow:hidden;white-space:nowrap}
-.note{color:#000;background-image:url("../i/note.png");background-repeat:no-repeat;padding:10px 0 0 10px;width:390px;height:370px}
+.note{color:#000;background-image:url("../i/note.png");background-repeat:no-repeat;padding:10px 0 0 10px;width:390px;height:370px;position:relative}
+.wrapper{position:relative}
+.bottom{position:absolute;bottom:35px}
 #footer{color:#fff;font-size:10px;font-family:Helvetica,Verdana,Arial,sans-serif;background:-moz-linear-gradient(bottom,rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.00) 100%);background:-webkit-gradient(linear,left bottom,left top,color-stop(0%,rgba(0,0,0,0.65)),color-stop(100%,rgba(0,0,0,0.00)));background:-webkit-linear-gradient(bottom,rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.00) 100%);background:-o-linear-gradient(bottom,rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.00) 100%);background:-ms-linear-gradient(bottom,rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.00) 100%);background:linear-gradient(bottom,rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.00) 100%);width:100%;height:35px;margin-top:0;margin-left:auto;margin-right:auto;padding-left:10px;padding-right:10px;padding-top:20px;position:fixed;bottom:0;z-index:1000}
 #sectionHeader{font-family:Helvetica,Verdana,Arial,sans-serif;font-size:15px;padding:5px;margin-bottom:10px;width:250px;text-shadow:2px 2px 2px #000;filter:dropshadow(#000,2,2);background:-moz-linear-gradient(left,rgba(255,255,255,0.55) 0%,rgba(255,255,255,0.00) 100%);background:-webkit-gradient(linear,left top,right top,color-stop(0%,rgba(255,255,255,0.55)),color-stop(100%,rgba(255,255,255,0.00)));background:-webkit-linear-gradient(left,rgba(255,255,255,0.55) 0%,rgba(255,255,255,0.00) 100%);background:-o-linear-gradient(left,rgba(255,255,255,0.55) 0%,rgba(255,255,255,0.00) 100%);background:-ms-linear-gradient(left,rgba(255,255,255,0.55) 0%,rgba(255,255,255,0.00) 100%);background:linear-gradient(left,rgba(255,255,255,0.55) 0%,rgba(255,255,255,0.00) 100%);-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px}
 @font-face{font-family:default-font;src:url("RexBold.otf")}
