hidden scroll bars

--- a/css/styles.styl
+++ b/css/styles.styl
@@ -62,6 +62,8 @@ a:hover
   margin 10px auto 0px auto
   overflow scroll
   clear both
+  overflow auto
+  overflow-x hidden
 
 .row
   overflow hidden
