--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ a:hover{color:#a93961;text-decoration:underline}
 #header{color:#333;text-align:center;font-size:3em;font-family:default-font,Helvetica,Verdana,Arial,sans-serif;border-bottom:1px solid #ccc;background:#fcfcfc;background:-moz-linear-gradient(top,rgba(252,252,252,0.80) 0%,rgba(216,216,216,0.80) 50%,#c4c4c4 51%,rgba(242,242,242,0.80) 100%);background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,rgba(252,252,252,0.80)),color-stop(50%,rgba(216,216,216,0.80)),color-stop(51%,rgba(196,196,196,0.80)),color-stop(100%,rgba(242,242,242,0.80)));background:-webkit-linear-gradient(top,rgba(252,252,252,0.80) 0%,rgba(216,216,216,0.80) 50%,rgba(196,196,196,0.80) 51%,rgba(242,242,242,0.80) 100%);background:-o-linear-gradient(top,rgba(252,252,252,0.80) 0%,rgba(216,216,216,0.80) 50%,rgba(196,196,196,0.80) 51%,rgba(242,242,242,0.80) 100%);background:-ms-linear-gradient(top,rgba(252,252,252,0.80) 0%,rgba(216,216,216,0.80) 50%,rgba(196,196,196,0.80) 51%,rgba(242,242,242,0.80) 100%);background:linear-gradient(top,rgba(252,252,252,0.80) 0%,rgba(216,216,216,0.80) 50%,rgba(196,196,196,0.80) 51%,rgba(242,242,242,0.80) 100%);text-shadow:1px 1px 1px #fff;width:100%;margin:0 auto 0 auto;padding:20px 10px 12px 10px;top:0;position:fixed;z-index:1000}
 #mainContent{padding:10px;margin-top:85px}
 .overflowHidden{overflow:hidden}
-#grid{width:820px;margin:10px auto 0 auto;overflow:scroll;clear:both}
+#grid{width:820px;margin:10px auto 0 auto;overflow:scroll;clear:both;overflow:auto;overflow-x:hidden}
 .row{overflow:hidden}
 .cell{float:left;padding:5px;overflow:hidden;white-space:nowrap}
 .note{color:#000;background-image:url("../i/note.png");background-repeat:no-repeat;padding:10px 0 0 10px;width:390px;height:370px;position:relative}
