--- a/css/styles.styl
+++ b/css/styles.styl
@@ -7,6 +7,7 @@ body
   font-family Helvetica, Verdana, Arial, sans-serif
   background #DDD
   margin 0px
+  height 1000px
   
 ul
   list-style none
@@ -32,8 +33,6 @@ a:hover
 #header
   color #333
   text-align center
-  font-size 3em
-  font-family default-font, Helvetica, Verdana, Arial, sans-serif
   border-bottom 1px solid #CCC
   background rgb(252,252,252)
   background -moz-linear-gradient(top,  rgba(252,252,252,.8) 0%, rgba(216,216,216,.8) 50%, rgba(196,196,196,1) 51%, rgba(242,242,242,.8) 100%)
@@ -42,10 +41,9 @@ a:hover
   background -o-linear-gradient(top,  rgba(252,252,252,.8) 0%,rgba(216,216,216,.8) 50%,rgba(196,196,196,.8) 51%,rgba(242,242,242,.8) 100%)
   background -ms-linear-gradient(top,  rgba(252,252,252,.8) 0%,rgba(216,216,216,.8) 50%,rgba(196,196,196,.8) 51%,rgba(242,242,242,.8) 100%)
   background linear-gradient(top,  rgba(252,252,252,.8) 0%,rgba(216,216,216,.8) 50%,rgba(196,196,196,.8) 51%,rgba(242,242,242,.8) 100%)
-  text-shadow 1px 1px 1px #FFF
   width 100%
   margin 0px auto 0px auto
-  padding 20px 10px 12px 10px
+  padding 12px 10px 18px 10px
   top 0px
   position fixed
   z-index 1000
@@ -91,15 +89,15 @@ a:hover
   bottom 35px
 
 #footer 
-  color white
+  color black
   font-size 10px
   font-family Helvetica, Verdana, Arial, sans-serif
-  background -moz-linear-gradient(bottom,  rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%)
-  background -webkit-gradient(linear, left bottom, left top, color-stop(0%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0)))
-  background -webkit-linear-gradient(bottom,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%)
-  background -o-linear-gradient(bottom,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%)
-  background -ms-linear-gradient(bottom,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%)
-  background linear-gradient(bottom,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%)
+  background -moz-linear-gradient(bottom,  rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%)
+  background -webkit-gradient(linear, left bottom, left top, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,0)))
+  background -webkit-linear-gradient(bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%)
+  background -o-linear-gradient(bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%)
+  background -ms-linear-gradient(bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%)
+  background linear-gradient(bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%)
   width 100%
   height 35px
   margin-top 0px
