--- a/css/styles.styl
+++ b/css/styles.styl
@@ -1,114 +1,104 @@
+// Mixins
+borderRadius()
+  -webkit-border-radius arguments
+  -moz-border-radius arguments
+  border-radius arguments
+  
+mainDivStyle()
+  height 100%
+  margin 0.313em
+  background #f8f8f8
+  borderRadius(5px)
+  border 5px solid #f8f8f8
+  -moz-box-shadow 0 4px 2px #dddddd
+  -webkit-box-shadow 0 4px 2px #dddddd
+  box-shadow 0 4px 2px #dddddd
+  padding 0.8em
+
+mainContainer()
+  max-width 64.000em
+  min-height 9.375em
+  margin auto
+  padding 0 0.313em
+  position relative
+  
+btnDefaults()
+  borderRadius(5px)
+  padding 10px
+  text-align center
+  color #ffffff !important
+  
+reflection()
+  -webkit-box-reflect below 4px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.7, transparent), to(white))
+
 //*********************************************************
 // HTML Element Styles
 //*********************************************************
 body
-  color white
-  font-size 13px
-  font-family Helvetica, Verdana, Arial, sans-serif
-  background #DDD
-  margin 0px
-  height 1000px
-  
-ul
-  list-style none
+  margin 0
+  padding 0
+  font-family default-font, Helvetica, Verdana, Arial, sans-serif
+  background #eeeeee
+  overflow -moz-scrollbars-vertical !important
+  overflow-x scroll !important
   
 img
   display block
-  margin 10px auto 0px auto
-  -webkit-box-reflect below 4px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.7, transparent), to(white))
+  margin 5px 0px
   -webkit-border-radius 5px  
-  border-radius 5px  
+  border-radius 5px
   
 a
-  color #555
+  margin-left 5px
+  color #000
+  &:visited
+    color #666
+  &:hover
+    color #fff
+    background-color #000
   text-decoration none
-  
-a:hover
-  color #a93961
-  text-decoration underline
 
 //*********************************************************
 // Div Styles
 //*********************************************************
+#header-main-container
+  mainContainer()
+  min-height 0
+  padding-bottom 0.313em
+
 #header
-  color #333
-  text-align center
-  border-bottom 1px solid #CCC
-  background rgb(252,252,252)
-  background -moz-linear-gradient(top,  rgba(252,252,252,.8) 0%, rgba(216,216,216,.8) 50%, rgba(196,196,196,1) 51%, rgba(242,242,242,.8) 100%)
-  background -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(252,252,252,.8)), color-stop(50%,rgba(216,216,216,.8)), color-stop(51%,rgba(196,196,196,.8)), color-stop(100%,rgba(242,242,242,.8)))
-  background -webkit-linear-gradient(top,  rgba(252,252,252,.8) 0%,rgba(216,216,216,.8) 50%,rgba(196,196,196,.8) 51%,rgba(242,242,242,.8) 100%)
-  background -o-linear-gradient(top,  rgba(252,252,252,.8) 0%,rgba(216,216,216,.8) 50%,rgba(196,196,196,.8) 51%,rgba(242,242,242,.8) 100%)
-  background -ms-linear-gradient(top,  rgba(252,252,252,.8) 0%,rgba(216,216,216,.8) 50%,rgba(196,196,196,.8) 51%,rgba(242,242,242,.8) 100%)
-  background linear-gradient(top,  rgba(252,252,252,.8) 0%,rgba(216,216,216,.8) 50%,rgba(196,196,196,.8) 51%,rgba(242,242,242,.8) 100%)
-  width 100%
-  margin 0px auto 0px auto
-  padding 12px 10px 18px 10px
-  top 0px
-  position fixed
-  z-index 1000
+  mainDivStyle()
+  -webkit-border-top-right-radius 0px
+  -webkit-border-top-left-radius 0px
+  margin 0em 0.313em 0.313em 0.313em
+  padding 0em 0.8em 0.8em 0.8em
+
+#footer
+  @include mainDivStyle;
+  margin-top 16px
+  min-height 20px
 
 #mainContent
-  padding 10px
-  margin-top 85px
+  padding 2px 0px
   
 .overflowHidden
   overflow hidden
-  
-#grid
-  width 820px
-  margin 25px auto 0px auto
-  overflow scroll
-  clear both
-  overflow auto
-  overflow-x hidden
 
-.row
-  overflow hidden
-  
-.cell
-	float left
-	padding 5px
-	overflow hidden
-	white-space nowrap
+.clear
+  clear both
 
 .note
-  color black
-  background-image url(../i/note.png)
-  background-repeat no-repeat
-  padding 10px 0px 0px 10px
-  width 390px
-  height 370px
-  position relative
+  mainDivStyle()
+  width 46%
+  padding 10px
+  margin 10px 5px
+  height 390px
   display none
-  
-.wrapper
-  position relative
-.bottom
-  position absolute
-  bottom 35px
 
 #footer 
-  color black
-  font-size 10px
-  font-family Helvetica, Verdana, Arial, sans-serif
-  background -moz-linear-gradient(bottom,  rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%)
-  background -webkit-gradient(linear, left bottom, left top, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,0)))
-  background -webkit-linear-gradient(bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%)
-  background -o-linear-gradient(bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%)
-  background -ms-linear-gradient(bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%)
-  background linear-gradient(bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%)
-  width 100%
-  height 35px
-  margin-top 0px
-  margin-left auto
-  margin-right auto
-  padding-left 10px
-  padding-right 10px
-  padding-top 20px
-  position fixed
-  bottom 0px
-  z-index 1000
+  mainDivStyle()
+  margin-top 16px
+  min-height 20px
 
 #sectionHeader 
   font-family Helvetica, Verdana, Arial, sans-serif
@@ -127,17 +117,46 @@ a:hover
   -webkit-border-radius 5px
   -moz-border-radius 5px
   border-radius 5px
+  
+.float_left
+  float left
+  
+.float_right
+  float right
+  
+.links
+  margin 50px auto
+  text-align center
+  
+.promo-image
+  height 200px
+  margin 20px auto
+  reflection()
+  
+.shadow
+  -moz-box-shadow 0px 1px 3px #dddddd
+  -webkit-box-shadow 0px 1px 3px #dddddd
+  box-shadow 0px 1px 3px #dddddd
+  
+.greenBtn
+  btnDefaults()
+  background #67C478
+  display block
+  margin-top 2px
 
 //*********************************************************
 // Text Styles
 //*********************************************************
 @font-face
-	font-family default-font
-	src url('RexBold.otf')
+  font-family default-font
+  src url('fonts/HelveticaNeueTHin.ttf')
+  
+@font-face
+  font-family fancy-font
+  src url('fonts/angelina.TTF')
 
 h1
   color #282828
-  text-align center
   font-family default-font, Helvetica, Verdana, Arial, sans-serif
   font-size 6em
   margin 5px auto -12px auto
@@ -150,6 +169,13 @@ h2
   font-size 3em
   margin 5px auto -12px auto
   text-shadow 0px 1px 0px #FFF
+  
+.fancy
+  color #999999
+  font-family fancy-font, Helvetica, Verdana, Arial, sans-serif
+  font-size 2em
+  font-weight normal
+  text-shadow 0.04em 0.04em 0 #FFF
   
 underline
   text-decoration underline
