--- a/css/styles.styl
+++ b/css/styles.styl
@@ -100,24 +100,6 @@ a
   margin-top 16px
   min-height 20px
 
-#sectionHeader 
-  font-family Helvetica, Verdana, Arial, sans-serif
-  font-size 15px
-  padding 5px
-  margin-bottom 10px
-  width 250px
-  text-shadow 2px 2px 2px #000
-  filter dropshadow(color=#000, offx=2, offy=2)
-  background -moz-linear-gradient(left,  rgba(255,255,255,0.55) 0%, rgba(255,255,255,0) 100%)
-  background -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0.55)), color-stop(100%,rgba(255,255,255,0)))
-  background -webkit-linear-gradient(left,  rgba(255,255,255,0.55) 0%,rgba(255,255,255,0) 100%)
-  background -o-linear-gradient(left,  rgba(255,255,255,0.55) 0%,rgba(255,255,255,0) 100%)
-  background -ms-linear-gradient(left,  rgba(255,255,255,0.55) 0%,rgba(255,255,255,0) 100%)
-  background linear-gradient(left,  rgba(255,255,255,0.55) 0%,rgba(255,255,255,0) 100%)
-  -webkit-border-radius 5px
-  -moz-border-radius 5px
-  border-radius 5px
-  
 .float_left
   float left
   
@@ -149,7 +131,7 @@ a
 //*********************************************************
 @font-face
   font-family default-font
-  src url('fonts/HelveticaNeueTHin.ttf')
+  src url('fonts/HelveticaNeueThin.ttf')
   
 @font-face
   font-family fancy-font
